--- a/blog/blog.css
+++ b/blog/blog.css
@@ -1,4 +1,22 @@
 /* stylelint-disable selector-list-comma-newline-after */
+nav.navigation ul{
+  display: flex;
+  justify-content: center;
+  background-color: rgba(172, 166, 190, 0);
+  
+}
+
+nav.navigation ul li{
+  padding: 0rem 2rem;
+  list-style-type: none;
+  transition: 0.2 ease;
+  
+}
+
+nav.navigation ul li:hover{
+  background-color: rgb(196, 196, 196);
+  
+}
 
 .blog-header {
   line-height: 1;
@@ -103,4 +121,26 @@ h1, h2, h3, h4, h5, h6 {
 }
 .blog-footer p:last-child {
   margin-bottom: 0;
+}
+#menu {
+  background-image: url(../images/menu-bg.jpg);
+  min-height: 100vh;
+}
+.menu-content {
+  max-width: 560px;
+  margin-top: 10%;
+}
+.menu-content .page-title {
+  text-align: center;
+}
+.menu-content p {
+  font-size: 1.125rem;
+  margin: 10px 0 0;
+}
+.grid {
+  display: grid;
+  gap: 26px;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  margin-top: 6%;
+  margin-bottom: 50px;
 }
