--- a/blog/blog.css
+++ b/blog/blog.css
@@ -147,3 +147,115 @@ h1, h2, h3, h4, h5, h6 {
 body{
   background-color: rgb(211, 209, 209);
 }
+.slider_container {
+  margin: 30px auto;
+  margin-left: 2.5cm;
+  margin-bottom: 50px;
+  width: 700px;
+  height: 300px;
+  position: relative;
+  border: 20px solid;    
+  border-color: rgb(211, 209, 209);
+  border-bottom-width: 100px;
+  background-color: rgb(211, 209, 209);
+}
+
+.slider_container div {
+  position: absolute;
+  margin-right:1.5cm;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  filter: alpha(opacity=0);
+}
+.slider_container div {
+  -webkit-animation: round 25s linear infinite;
+          animation: round 25s linear infinite;
+}
+
+@-webkit-keyframes round {
+  4% {
+      opacity: 1;
+      filter: alpha(opacity=100);
+      /* 0 - 1秒 淡入*/
+  }
+  20% {
+      opacity: 1;
+      filter: alpha(opacity=100);
+      /* 1- 5秒靜止*/
+  }
+  24% {
+      opacity: 0;
+      filter: alpha(opacity=0);
+      /* 5-6秒淡出*/
+  }
+}
+@keyframes round {
+  4% {
+      opacity: 1;
+      filter: alpha(opacity=100);
+      /* 0 - 1秒 淡入*/
+  }
+  20% {
+      opacity: 1;
+      filter: alpha(opacity=100);
+      /* 1- 5秒靜止*/
+  }
+  24% {
+      opacity: 0;
+      filter: alpha(opacity=0);
+      /* 5-6秒淡出*/
+  }
+}
+.slider_container div:nth-child(5) {
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s;
+}
+
+.slider_container div:nth-child(4) {
+  -webkit-animation-delay: 5s;
+          animation-delay: 5s;
+}
+
+.slider_container div:nth-child(3) {
+  -webkit-animation-delay: 10s;
+          animation-delay: 10s;
+}
+
+.slider_container div:nth-child(2) {
+  -webkit-animation-delay: 15s;
+          animation-delay: 15s;
+}
+
+.slider_container div:nth-child(1) {
+  -webkit-animation-delay: 20s;
+          animation-delay: 20s;
+}
+.slider_container span {    
+  color: #000;
+  background: #fff;
+  position: absolute;
+  left: 0%;
+  top: 280px;
+  width: 400px;
+  height: 100px;
+  font-size: 30px;
+  text-align: center;
+  line-height: 100px;
+  -webkit-transform:scaleY(0);
+      -ms-transform:scaleY(0);
+          transform:scaleY(0);
+  -webkit-transition: all 0.5s ease-in-out;
+          transition: all 0.5s ease-in-out;
+}
+
+.slider_container:hover span {
+  width: 100%;
+  -webkit-transform:scaleY(1);
+      -ms-transform:scaleY(1);
+          transform:scaleY(1);
+}
+.slider_container:hover div {
+  -webkit-animation-play-state: paused;
+          animation-play-state: paused;
+}
